write memory related option into sbt